Fetch all portfolio information
